--- a/openfisca_pf/parameters/dicp/impot_foncier/base/abattement.yaml
+++ b/openfisca_pf/parameters/dicp/impot_foncier/base/abattement.yaml
@@ -1,8 +1,8 @@
-premier:
-  description: "Paramètres concernant le premire abattement de 25%"
+office:
+  description: "Paramètres concernant le premire abattement d'office de 25%"
 
   taux:
-    description: "Taux du premier abattement appliqué à la valeur locative pour calculer la base imposable de l'impôt foncier"
+    description: "Taux du premier abattement d'office appliqué à la valeur locative pour calculer la base imposable de l'impôt foncier"
     metadata:
       type: float
       unit: /1
@@ -10,14 +10,14 @@ premier:
       1950-11-16:
         value: 0.25
 
-second:
-  description: "Paramètres concernant le second abattement en fonction du type de location"
+locatif:
+  description: "Paramètres concernant l'abattement locatif en fonction du type de location"
 
   location_meuble:
-    description: "Paramètres concernant le second abattement pour les bien en location meublé"
+    description: "Paramètres concernant l'abattement locatif pour les bien en location meublé"
 
     taux:
-      description: "Taux du second abattement appliqué pour calculer la base imposable de l'impôt foncier si le bien est en location meublé"
+      description: "Taux de l'battement locatif appliqué pour calculer la base imposable de l'impôt foncier si le bien est en location meublé"
       metadata:
         type: float
         unit: /1
@@ -26,10 +26,10 @@ second:
           value: 0.30
 
   location_non_meuble:
-    description: "Paramètres concernant le second abattement pour les bien en location non-meublé"
+    description: "Paramètres concernant l'abattement locatif pour les bien en location non-meublé"
 
     taux:
-      description: "Taux du second abattement appliqué pour calculer la base imposable de l'impôt foncier si le bien est en location non-meublé"
+      description: "Taux de l'abattement locatif appliqué pour calculer la base imposable de l'impôt foncier si le bien est en location non-meublé"
       metadata:
         type: float
         unit: /1
